Fix contrast errors / commented form examples on homepage

--- a/public_html/css/compiled/app.css
+++ b/public_html/css/compiled/app.css
@@ -8531,7 +8531,7 @@ nav {
   margin: 0 0 4rem 0; }
 
 .admin-dashboard__job-poster-title {
-  color: #2196f3;
+  color: #0a6cbc;
   font-weight: 700; }
 
 .admin-dashboard__job-poster-list {
